# rust_pyo3_clap

./: .gitignore  Cargo.toml  README.md  demo.py  sees-rust-as-python-backend.md
fib-cli/: Cargo.toml
fib-cli/src/: main.rs
fib-core/: Cargo.toml
fib-core/proc-macros/: Cargo.toml
fib-core/src/: lib.rs
fib-py/: Cargo.toml  pyproject.toml
fib-py/python/sees_py/: __init__.py  sees_py.pyi
fib-py/src/: lib.rs
sees-cli/: Cargo.toml
sees-cli/src/: main.rs
sees-core/: Cargo.toml
sees-core/src/: lib.rs  sees_pyo3.rs
sees-proc-macros/: Cargo.toml
sees-proc-macros/src/: lib.rs
sees-py/: Cargo.toml  pyproject.toml
sees-py/python/sees-py/: sees_py.pyi
sees-py/python/sees_py/: __init__.py  sees_py.pyi
sees-py/src/: lib.rs
