[package]
name = "sees-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.16.5", optional = true }
sees-proc-macros = { path = "../sees-proc-macros" }

[features]
pyo3 = ["dep:pyo3"]